--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -9,6 +11,7 @@
         android:layout_height="wrap_content"
         android:text="Android Lint Rule"
         android:textAlignment="center"
+        android:textSize="32sp"
         android:textStyle="bold" />
 
     <TextView
@@ -17,5 +20,13 @@
         android:layout_marginTop="8dp"
         android:text="Detect fragment memory leak"
         android:textAlignment="center" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:itemCount="2"
+        tools:listitem="@layout/fragment_content_recycler_view_item" />
 
 </LinearLayout>
